# isaac-achievement-hunter

./: .env  .gitignore  .prettierrc  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: release.yml
public/: index.html  manifest.json
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/common/: fileHandler.ts  utils.ts
src/components/body/: body.tsx
src/components/main/: main.tsx
src/components/navigation/: navigator.tsx
src/home/: index.ts  main.tsx
src/home/components/achieved/: achieved.tsx
src/home/components/common/: common.tsx
src/home/components/error/: error.tsx
src/home/components/filter/: filter.tsx
src/home/components/navigation/: navigator.tsx
src/home/components/pagination/: pagination.tsx
src/home/components/statistics/: statistics.tsx
src/home/components/table/: table.tsx
src/home/components/wiki/: wiki.tsx
src/hooks/: externalClickHandler.ts  firstLoadHandler.ts  serviceStatusHandler.ts  swipeHandler.ts
src/lib/: types.ts
src/main/: index.ts  main.tsx
src/main/components/common/: common.tsx
src/main/components/error/: error.tsx
src/main/components/filter/: filter-button.tsx  filter.tsx
src/main/components/loader/: loader.tsx
src/main/components/navigation/: navigator.tsx
src/main/components/pagination/: pagination.tsx
src/main/components/statistics/: statistics.tsx
src/main/components/table/: table.tsx
src/main/components/update/: update.tsx
(+6 files in other folders)
