[package]
name = "Isaac-Achievement-Hunter"
version = "0.2.0"
description = "An app for tracking Steam achievements in Binding of Isaac: Repentance"
authors = ["Benjamin Weare"]
license = "MIT"
repository = "https://github.com/incendiarybean/isaac-achievement-hunter"
default-run = "Isaac-Achievement-Hunter"
edition = "2021"
rust-version = "1.59"

[build-dependencies]
tauri-build = { version = "1.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.0", features = ["updater"] }
webbrowser = "0.8.2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
