[package]
name = "isaac-achievement-hunter"
version = "0.2.1"
description = "An app for tracking Steam achievements in Binding of Isaac: Repentance"
authors = ["Benjamin Weare"]
license = "MIT"
repository = "https://github.com/incendiarybean/isaac-achievement-hunter"
default-run = "isaac-achievement-hunter"
edition = "2021"
rust-version = "1.59"

[build-dependencies]
tauri-build = { version = "1.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.0", features = ["devtools", "updater", "window-set-min-size"] }
webbrowser = "0.8.2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
